--- a/platforms/ios/www/templates/register.html
+++ b/platforms/ios/www/templates/register.html
@@ -10,7 +10,7 @@
       <div class="list">
         <label class="item item-input">
           <span class="input-label">Email</span>
-          <input type="text" ng-model="loginData.email" required>
+          <input type="email" ng-model="loginData.email" required>
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
