--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -2,10 +2,10 @@
   <ion-content padding="true">
     <img ng-src="http://placehold.it/300x150&text=Cauz+Colony+Logo">
     <p>Donec metus magna, vestibulum ac purus eu, lacinia efficitur elit. Quisque rutrum hendrerit dignissim. Sed pretium odio urna, nec varius ex viverra in.</p>
-    <button class="button button-block button-positive" ng-click="openModal('menu.html')" ng-show="loggedIn()">
+    <button class="button button-block button-positive" ng-click="openModal('menu.html')" ng-show="loggedIn">
       Choose A Project
     </button>
-    <button class="button button-block button-positive" ng-click="openModal('login.html')" ng-show="!loggedIn()">
+    <button class="button button-block button-positive" ng-click="openModal('login.html')" ng-show="!loggedIn">
       Log In
     </button>
   </ion-content>
