--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -1,4 +1,5 @@
 .login {
+  text-align: center;
   input[type="email"] {
     margin: 20px 0;
     border: 1px solid $gray-lt;
@@ -7,6 +8,19 @@
     font-family: AvenirNext;
     font-size: 12px;
     color: $gray-dk;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  p {
+    font-size: 19px;
+    margin-top: 20px;
+  }
+
+  .slider {
+    margin-top: 20px;
   }
 
   ::-webkit-input-placeholder {
@@ -27,7 +41,7 @@
     border-bottom: 18px solid transparent;  
     border-right: 16px solid $gray-ltr;
     position: absolute;
-    top: 199px;
+    top: 275px;
 
     &.right {
       left: 284px;
