--- a/scss/_video.scss
+++ b/scss/_video.scss
@@ -18,11 +18,23 @@
     margin: 14px 0;
     font-size: 17px;
     color: $gray-dk;
+    @media all and (orientation: landscape) {
+      display: none;
+    }
   }
 
   h2 {
     color: $teal-md;
     font-size: 17px;
-    margin: 30px 0 10px;
+    margin: 5px 0 10px;
+    @media all and (orientation: landscape) {
+      display: none;
+    }
+  }
+
+  h1 {
+    @media all and (orientation: landscape) {
+      display: none;
+    }
   }
 }
