--- a/www/templates/survey.rating.html
+++ b/www/templates/survey.rating.html
@@ -3,9 +3,11 @@
 </p>
 <hr>
 <p class="question" ng-bind-html="qText"></p>
-<button class="button button-outline button-gray button-round button-small" ng-repeat="option in question.options" ng-click="select($index)" ng-class="{'button-energized': answer == $index, 'first': $index == 0}">
-  {{option}}
-</button>
+<div class="btn-group">
+	<button class="button button-outline button-gray button-round button-small" ng-repeat="option in question.options" ng-click="select($index)" ng-class="{'button-energized': answer == $index, 'first': $index == 0}">
+	  {{option}}
+	</button>
+</div>
 <button class="button button-round button-positive button-bottom" ng-click="submit(answer)" ng-show="answer != null">
   Submit
 </button>
