--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -45,6 +45,15 @@
           margin: 0 0 0 22px;
         }
       }
+      &.button-multi {
+        width: 40px;
+        height: 40px;
+        min-width: 40px;
+        min-height: 40px;
+        font-size: 24px;
+        float: left;
+        margin-right: 20px;
+      }
     }
   }
 }
