--- a/www/templates/survey.open.html
+++ b/www/templates/survey.open.html
@@ -1,7 +1,5 @@
 <h3>{{question.text}}</h3>
-<label class="item item-input">
-  <input type="text" placeholder="{{placeholder}}" ng-model="answer">
-</label>
-<button class="button button-block button-positive" ng-click="submit(answer)" ng-show="showSubmit()">
-  Submit <i class="icon ion-chevron-right"></i>
+<textarea placeholder="{{placeholder}}" ng-model="answer"></textarea>
+<button class="button button-round button-positive button-bottom" ng-click="submit(answer)" ng-show="answer != null">
+  Submit
 </button>
