--- a/platforms/ios/www/templates/thankyou.html
+++ b/platforms/ios/www/templates/thankyou.html
@@ -1,8 +1,9 @@
 <ion-content class="cauz-panel video thank-you" padding="true" scroll="false">
-  <img ng-src="{{offer.image}}" alt="">
-  <h1>THANK YOU!</h1>
-  <h2>In just a few minutes, you helped earn $75,000 for the {{charityName}}!</h2>
-  <a ng-click="offerClick()" ng-bind-html="offerText" style="{{offer.style}}"></a>
+  <a ng-click="offerClick()">
+    <h1>THANK YOU!</h1>
+    <h2>In just a few minutes, you helped earn $75,000 for the {{charityName}}!</h2>
+    <img ng-src="{{offer.image}}" alt="">
+  </a>
   <button class="button button-round button-positive button-bottom" ng-click="navigate('login')">
     home
   </button>
