--- a/platforms/ios/www/templates/login.html
+++ b/platforms/ios/www/templates/login.html
@@ -1,8 +1,8 @@
 <ion-content class="cauz-panel login" padding="true" scroll="false">
-  <input type="email" ng-model="loginData.email" placeholder="Email">
+  <!-- <input type="email" ng-model="loginData.email" placeholder="Email"> -->
   <h3>Choose a charity<br>to start your project:</h3>
-  <ion-slide-box does-continue="true" show-pager="false" active-slide="loginData.projectId">
-    <ion-slide ng-repeat="project in projects" >
+  <ion-slide-box does-continue="false" show-pager="false" active-slide="projectId">
+    <ion-slide ng-repeat="project in projects track by $index"  >
       <div class="slide-container">
         <img ng-src="{{project.image}}">
       </div>
@@ -11,5 +11,6 @@
   <i class="icon arrow left" ng-click="slide(-1)"></i>
   <i class="icon arrow right" ng-click="slide(1)"></i>
   <p>In only takes a few minutes<br>to be a hero to your cauz.</p>
-  <button class="button button-positive button-round button-bottom" type="submit" ng-click="login()" ng-show="showButton()">GO!</button>
+  <!-- <button class="button button-positive button-round button-bottom" type="submit" ng-click="login()" ng-show="showButton()">GO!</button> -->
+  <button class="button button-positive button-round button-bottom" type="submit" ng-click="login()">GO!</button>
 </ion-content>
