--- a/platforms/ios/www/templates/video.html
+++ b/platforms/ios/www/templates/video.html
@@ -1,8 +1,8 @@
 <ion-content class="cauz-panel video step" padding="true" scroll="false">
   <h1>Project: {{title}}, Step {{currentStep + 1}}/{{steps}}</h1>
-  <p ng-bind-html="copy"></p>
+  <p ng-bind-html="text"></p>
   <div class="video-container" ng-hide="videoWatched">
-      <youtube-video id="best-vid" video-id="video.id" player-vars="playerVars"></youtube-video>
+      <youtube-video id="best-vid" video-id="video.videoId" player-vars="playerVars"></youtube-video>
   </div>
   <h2 ng-show="videoPlaying">Rotate for full screen</h2>
   <button class="button button-round button-positive button-bottom" ng-click="next()" ng-show="videoWatched">
