--- a/platforms/ios/www/templates/survey.rating.html
+++ b/platforms/ios/www/templates/survey.rating.html
@@ -1,5 +1,5 @@
 <p class="instructions">
-  Rate this feature.<br><span>1</span> being not important at all.<br><span>4</span> being very important.
+  Rate this from:<br><span>1</span> being not important at all.<br><span>4</span> being very important.
 </p>
 <hr>
 <p class="question" ng-bind-html="qText"></p>
