--- a/platforms/ios/www/templates/home.html
+++ b/platforms/ios/www/templates/home.html
@@ -1,14 +1,13 @@
 <ion-content class="cauz-panel home blue" padding="true" scroll="false">
   <div><!-- ng-hide="complete"> -->
-  	<h1>This is Cauz Colony.<span>A place for doing good.</span></h1>
+  	<h1>This is Cauz Colony.<span>A network for good work.</span></h1>
     <p class="large">We don't want your money.<br>We just want a few minutes.</p>
   	<p class="blue large space-top">Easy steps to earn thousands for your favorite charity:</p>
-    <hr>
-    <ul>
-      <li><strong>1</strong><br>Sign up<br>&nbsp;</li>
-      <li><strong>2</strong><br>Complete<br>project</li>
-      <li><strong>3</strong><br>Help your<br>cauz</li>
-    </ul>
+    <ol class="blue">
+      <li>Choose your charity.</li>
+      <li>Watch a short video.</li>
+      <li>Take a quick survey.</li>
+    </ol>
     <button ng-click="navigate('login')">
       <span>Get Started</span>
     </button>
