--- a/scss/_login.scss
+++ b/scss/_login.scss
@@ -13,6 +13,9 @@
   h3 {
     font-size: 24px;
     margin-top: 50px;
+    @media only screen and (min-device-width : 320px) {
+      margin-top: 20px;
+    }
   }
 
   p {
@@ -44,18 +47,16 @@
     position: absolute;
     top: 275px;
 
+    @media only screen and (min-device-width : 320px) {
+      top: 215px;
+    }
+
     &.right {
-      left: 284px;
       border-top: 18px solid transparent;
       border-bottom: 18px solid transparent;
       border-left: 16px solid $gray-ltr;
       border-right: none;
-      
-      @media only screen 
-      and (min-device-width : 375px) 
-      and (max-device-width : 667px) {
-        left: 340px;
-      }
+      right: 16px;
     }
   }
 }
