--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -21,7 +21,7 @@
 		how people help and connect with <br>
 		causes they care about!
 	</p>
-	<p>Cauz Colony... a place for doing good.
+	<p>Cauz Colony... a network for good work.
 	</p>
 	<button ng-click="navigate('about-video')">
 	  <span>Watch the video</span>
