--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -10,7 +10,7 @@
   </ion-slide-box>
   <i class="icon arrow left" ng-click="slide(-1)"></i>
   <i class="icon arrow right" ng-click="slide(1)"></i>
-  <p>In only takes a few minutes<br>to be a hero to your cauz.</p>
+  <p>It only takes a few minutes<br>to be a hero to your cauz.</p>
   <!-- <button class="button button-positive button-round button-bottom" type="submit" ng-click="login()" ng-show="showButton()">GO!</button> -->
   <button class="button button-positive button-round button-bottom" type="submit" ng-click="login()">GO!</button>
 </ion-content>
