--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -56,4 +56,7 @@
     <preference name="SplashScreen" value="screen" />
     <allow-intent href="*" />
     <allow-navigation href="*" />
+    <feature name="SocialSharing">
+        <param name="android-package" value="nl.xservices.plugins.SocialSharing" />
+    </feature>
 </widget>
