--- a/platforms/ios/www/templates/survey.multiple-choice.html
+++ b/platforms/ios/www/templates/survey.multiple-choice.html
@@ -2,7 +2,7 @@
 </p>
 <ul class="options multiple-choice">
   <li ng-repeat="option in question.options">
-    <button class="button button-outline button-gray button-round button-multi" ng-click="select($index)" ng-class="{'button-energized': answer == $index}">
+    <button class="button button-outline button-gray button-round button-multi" ng-click="select($index)" ng-class="{'button-energized': answer == $index}" ng-if="option != ''">
       {{labels[$index]}}
     </button>
     <div class="option">
