--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -15,6 +15,13 @@
       left: 50%;
       bottom: 20px;
       margin-left: -35px;
+
+      &.left {
+        margin-left: -90px;
+      }
+      &.right {
+        margin-left: 20px;
+      }
     }
 
     &.button-outline {
