--- a/www/templates/survey.multiple-choice.html
+++ b/www/templates/survey.multiple-choice.html
@@ -1,8 +1,8 @@
 <p class="question" ng-bind-html="qText">
 </p>
 <ul class="options multiple-choice">
-  <li ng-repeat="option in question.options">
-    <button class="button button-outline button-gray button-round button-multi" ng-click="select($index)" ng-class="{'button-energized': answer == $index}">
+  <li ng-repeat="option in question.options track by $index">
+    <button class="button button-outline button-gray button-round button-multi" ng-click="select($index)" ng-class="{'button-energized': answer == $index}" ng-if="option != ''">
       {{labels[$index]}}
     </button>
     <div class="option">
