--- a/www/templates/thankyou.html
+++ b/www/templates/thankyou.html
@@ -2,7 +2,8 @@
   <a ng-click="offerClick()">
     <img ng-src="{{offer.image}}" alt="">
   </a>
-  <button class="button button-round button-positive button-bottom" ng-click="navigate('login')">
+  <button class="button button-round button-positive button-bottom left" ng-click="share()">Share</button>
+  <button class="button button-round button-positive button-bottom right" ng-click="navigate('login')">
     home
   </button>
 </ion-content>
