--- a/platforms/ios/www/templates/survey.multiple-choice.html
+++ b/platforms/ios/www/templates/survey.multiple-choice.html
@@ -1,7 +1,7 @@
 <p class="question" ng-bind-html="qText">
 </p>
 <ul class="options multiple-choice">
-  <li ng-repeat="option in question.options">
+  <li ng-repeat="option in question.options track by $index">
     <button class="button button-outline button-gray button-round button-multi" ng-click="select($index)" ng-class="{'button-energized': answer == $index}" ng-if="option != ''">
       {{labels[$index]}}
     </button>
